package edu.hitsz.props;

public class SuperPowerProp extends PowerProp{
    public SuperPowerProp(int locationX, int locationY, int speedX, int speedY) {
        super(locationX, locationY, speedX, speedY);
    }
}
